Fix CSS width on mobile version

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -20,7 +20,7 @@ h1
 .column
     float: left
     @media screen and (max-width: $break-small)
-        width: 100%
+        width: 100% !important
 
 
 .row:after
